# mujoco_ros_sim

./: README.md
mujoco_ros/: CMakeLists.txt  package.xml
mujoco_ros/include/: mjros.h  mujoco_rgbd_camera.hpp
mujoco_ros/src/: main.cpp  mjros.cpp  mujoco_rgbd_camera.cpp
mujoco_ros_msgs/: CMakeLists.txt  package.xml
mujoco_ros_msgs/action/: ImgReq.action
mujoco_ros_msgs/srv/: ImageRequest.srv
